Set up base of Pantry app

--- a/.eslintrc
+++ b/.eslintrc
@@ -35,7 +35,11 @@
     "max-len": [
       "warn",
       80
-    ]
+    ],
+    // Allow dev dependencies for things like devtools or PropTypes.
+    "import/no-extraneous-dependencies": ["error", {"devDependencies": true}],
+    "import/no-named-as-default": "off",
+    "import/no-named-as-default-member": "off"
   },
   "env": {
     // Specify the environment to avoid errors.
