Added pantryItems file, organized code

--- a/.eslintrc
+++ b/.eslintrc
@@ -39,7 +39,8 @@
     // Allow dev dependencies for things like devtools or PropTypes.
     "import/no-extraneous-dependencies": ["error", {"devDependencies": true}],
     "import/no-named-as-default": "off",
-    "import/no-named-as-default-member": "off"
+    "import/no-named-as-default-member": "off",
+    "no-unused-vars": "warn"
   },
   "env": {
     // Specify the environment to avoid errors.
